--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/va/script.js"></script>
   </body>
 </html>
