--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <!-- vercel 埋点 -->
     <script>
+      // insights
       window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+      // speed-insights
+      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
     </script>
-    <script defer src="/va/script.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
   </body>
 </html>
