--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       // speed-insights
       window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
     </script>
-    <script defer src="/_vercel/insights/script.js"></script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
+    <script defer src="/_vercel/insights.js"></script>
+    <script defer src="/_vercel/speed-insights.js"></script>
   </body>
 </html>
