--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/assets/images/logo_piece.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pirate Vue</title>
+    <title>Pirate Admin</title>
   </head>
 
   <body>
